Add extensive unit tests for Kafka listeners, email services, and global exception handling; remove redundant custom `IllegalStateException`.